--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat app</title>
+    <title>Chat app</title>   
+    <script type="module" src="/main.js" defer></script>
+    <script src="./socket.io/socket.io.js" defer></script> 
   </head>
   <body>
 
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
