--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat app</title>
-  </head>
-  <body>
-
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="main.js" defer type="module"></script>
+</head>
+<body>
+    <h1>Hello socket chat</h1>
+    <input type="text" id="sendMessage"><button id="sendBtn">Skicka</button>
+    <div id="messages"></div>
+</body>
 </html>
