--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <script src="main.js" defer type="module"></script>
 </head>
 <body>
+
+
+
+
     <h1>Hello socket chat</h1>
     <input type="text" id="sendMessage"><button id="sendBtn">Skicka</button>
     <div id="messages"></div>
