--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,12 +9,16 @@
     <script src="main.js" defer type="module"></script>
 </head>
 <body>
-
-
-
-
-    <h1>Hello socket chat</h1>
-    <input type="text" id="sendMessage"><button id="sendBtn">Skicka</button>
-    <div id="messages"></div>
+    <div class="grid-and-chat-container">
+        <div class="grid-container">
+            <h1>Hello socket chat</h1>
+            <input type="text" id="sendMessage"><button id="sendBtn">Skicka</button>
+            <div id="messages"></div>
+        </div>
+        <div class="chat-container">
+            <div class="chat-box"></div>
+            <div class="write-message-box"></div>
+        </div>
+    </div>
 </body>
 </html>
