--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,12 @@
     <title>Document</title>
     <script src="main.js" defer type="module"></script>
 </head>
+
 <body>
-
-
-
-
+    <div id="firstPageContainer"></div>
     <h1>Hello socket chat</h1>
     <input type="text" id="sendMessage"><button id="sendBtn">Skicka</button>
     <div id="messages"></div>
 </body>
+
 </html>
