--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,12 +12,11 @@
     <div class="grid-and-chat-container">
         <div class="grid-container">
             <h1>Hello socket chat</h1>
-            <input type="text" id="sendMessage"><button id="sendBtn">Skicka</button>
-            <div id="messages"></div>
+            <div id="grid-table"></div>
         </div>
         <div class="chat-container">
-            <div class="chat-box"></div>
-            <div class="write-message-box"></div>
+            <div class="chat-box" id="chat-box"></div>
+            <div class="write-message-box" id="write-message-box"></div>
         </div>
     </div>
 </body>
