style the landing page ish

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="firstPageContainer"></div>
-    <div class="grid-and-chat-container">
+    <div class="grid-and-chat-container" id="gridChatContainer">
         <div class="grid-container">
             <h1>Hello socket chat</h1>
             <div id="grid-table"></div>
