--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <div id="firstPageContainer"></div>
     <div class="grid-and-chat-container" id="gridChatContainer">
         <div class="grid-container">
-            <h1>Hello socket chat</h1>
+            <h1>Hello, <span id="userName"></span></h1>
             <div id="grid-table"></div>
         </div>
         <div class="chat-container">
