--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,12 +16,16 @@
         <div class="grid-container">
             <h1>Hello, <span id="userName"></span></h1>
             <div id="grid-table"></div>
+            <button id="clear-grid-btn">Clear Grid</button>
         </div>
         <div class="chat-container">
             <div class="chat-box" id="chat-box"></div>
             <div class="write-message-box" id="write-message-box"></div>
         </div>
+
     </div>
+
+
     
     
 </body>
